--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>
             Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!
         </p>
-        <button type="button">Start Quiz</button>
+        <button type="button" id="start-quiz-btn">Start Quiz</button>
     </div>
    
 
