--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Header -->
     <header>
         <p><a href="./highscores.html">View High Scores</a></p>
-        <p id="time">Time</p>
+        <p class='timer' id="timer">Time:</p>
     </header>
     
 <!-- Start Quiz  -->
@@ -29,7 +29,7 @@
         <p>
             Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!
         </p>
-        <button type="button" id="start-quiz-btn">Start Quiz</button>
+        <button type="button" class='start-quiz-btn' id="start-quiz-btn">Start Quiz</button>
     </div>
    
 
