add more css, attempt localStorage, fix minor bugs

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <div class="end-quiz">
             <h2>All done!</h2>
             <p class="user-final-score"></p>
-            <form>
+            <form id="user-initials-form">
                 <label for="initials">Enter initials:</label>
                 <input type="text" id="initials">
-                <button type="submit">Submit</button>
+                <button type="submit" id="submit-button">Submit</button>
             </form>
         </div>
     </div>
