add local stoarge, still need to find a way to add highscore element on load

--- a/highscores.html
+++ b/highscores.html
@@ -19,6 +19,7 @@
 <!-- High Scores -->
 <div class="high-scores">
     <h2>High Scores</h2>
+    <ul id="recent-high-scores"></ul>
     <button type="button"><a href="./index.html">Go back</a></button>
     <button type="button">Clear high scores</button>
 </div>
